<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context="com.kbcorp.android.bigbean.MainActivity">

    <ImageView
        android:id="@+id/image_view_coffee"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:contentDescription="@string/picture_of_the_restaurant"
        android:src="@drawable/caffeine"
        android:scaleType="center"
         />

    <TextView
        android:id="@+id/text_view_slogan"
        style="@style/CustomTextViewStyle"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/image_view_coffee"
        android:padding="16dp"
        android:textStyle="bold|italic"
        android:textSize="18dp"
        android:text="@string/restaurant_slogan"
        />

    <LinearLayout
        android:id="@+id/linear_layout_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_slogan"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_layout_opentill"
            style="@style/HorizontalLinearLayoutStyle">

        <ImageView
            android:id="@+id/image_view_opentill"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_clock"
            android:scaleType="centerInside"
            />

        <TextView
            android:layout_marginLeft="8dp"
            style="@style/CustomTextViewStyle"
            android:text="@string/icon_open_till"/>
        </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_layout_phone"
        style="@style/HorizontalLinearLayoutStyle"
        android:layout_marginTop="8dp">

        <ImageView
            android:id="@+id/image_view_phone"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_phone"
            android:scaleType="centerInside" />

        <TextView
            android:layout_marginLeft="8dp"
            style="@style/CustomTextViewStyle"
            android:text="@string/phone_number"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_layout_address"
        style="@style/HorizontalLinearLayoutStyle"
        android:layout_marginTop="8dp">

        <ImageView
            android:id="@+id/image_view_location"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_location"
            android:scaleType="centerInside" />

        <TextView
            android:layout_marginLeft="8dp"
            style="@style/CustomTextViewStyle"
            android:text="@string/address"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_menu"
        style="@style/HorizontalLinearLayoutStyle"
        android:layout_marginTop="8dp">

        <ImageView
            android:id="@+id/image_view_menu"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_edit"
            android:scaleType="centerInside" />

        <TextView
            android:layout_marginLeft="8dp"
            style="@style/CustomMenuTextViewStyle"
            android:text="@string/description"/>


    </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_description"
            style="@style/HorizontalLinearLayoutStyle"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_marginLeft="24dp"
                style="@style/CustomTextViewStyle"
                android:text="@string/menu"/>


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
